sidebar css fix for windows browser overlapping text

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -55,7 +55,7 @@ html {
 
 .sidebar {
   text-align: center;
-  padding: 2rem 1rem;
+  padding: 0rem 1rem;
   color: rgba(255,255,255,.5);
   background-color: #202020;
 }
@@ -85,7 +85,7 @@ html {
 
 /* Sidebar nav */
 .sidebar-nav {
-  margin-bottom: 1rem;
+  margin-bottom: 0rem;
 }
 .sidebar-nav-item {
   display: block;
